chore(vsc): change preview button description (#3237)
* chore(vsc): change preview button description

* chore: change button description to preview app

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -543,12 +543,12 @@
       },
       {
         "command": "fx-extension.preview",
-        "title": "Preview",
+        "title": "Preview App",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
         "command": "fx-extension.previewWithIcon",
-        "title": "Preview",
+        "title": "Preview App",
         "icon": "$(run)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
