fix: update path seperator

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -815,8 +815,8 @@
           },
           "fx-extension.defaultProjectRootDirectory": {
             "type": "string",
-            "description": "Set the default root directory for creating new teams app project. By default, the root directory is ${homeDir}\\TeamsApps. (requries reload of VS Code)",
-            "default": "${homeDir}\\TeamsApps"
+            "description": "Set the default root directory for creating new teams app project. By default, the root directory is ${homeDir}/TeamsApps. (requries reload of VS Code)",
+            "default": "${homeDir}/TeamsApps"
           }
         }
       }
