--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -815,7 +815,8 @@
           },
           "fx-extension.defaultProjectRootDirectory": {
             "type": "string",
-            "description": "Set the default root directory for creating new teams app project. By default, the root directory is $HOME_DIR/TeamsApps. (requries reload of VS Code)"
+            "description": "Set the default root directory for creating new teams app project. By default, the root directory is ${homeDir}/TeamsApps. (requries reload of VS Code)",
+            "default": "${homeDir}/TeamsApps"
           }
         }
       }
