--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -30,7 +30,7 @@
     "test:core-tools": "nyc mocha \"tests/core/tools.test.ts\"",
     "test:apiv2": "nyc mocha \"tests/plugins/resource/apiv2/*.test.ts\"",
     "test:solutionv3": "nyc mocha \"tests/plugins/solutionv3/*.test.ts\"",
-    "test:env-checker": "nyc mocha \"tests/common/deps-checker/*.test.ts\"",
+    "test:env-checker": "npx mocha \"tests/common/deps-checker/**/*.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
@@ -103,6 +103,7 @@
     "@types/adm-zip": "^0.4.33",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/chai-spies": "^1.0.3",
     "@types/cryptr": "^4.0.1",
     "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.9",
@@ -124,12 +125,14 @@
     "@types/semver": "^7.3.4",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
+    "@types/tmp": "^0.2.0",
     "@types/url-parse": "^1.4.3",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "chai-as-promised": "^7.1.1",
     "copy-webpack-plugin": "^6.4.1",
     "dotenv": "^8.2.0",
@@ -137,6 +140,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.2",
+    "find-process": "^1.4.4",
     "lint-staged": "^10.5.4",
     "mocha": "^9.1.3",
     "mocha-junit-reporter": "^2.0.2",
@@ -149,6 +153,7 @@
     "ts-loader": "^8.0.3",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
+    "tmp": "^0.2.1",
     "ttypescript": "^1.5.12",
     "typedoc": "^0.20.35",
     "typescript": "^4.2.3",
