--- a/.github/workflows/cicd_test_trigger.yml
+++ b/.github/workflows/cicd_test_trigger.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
             curl \
                 -u :${{ secrets.GITHUB_TOKEN }} \
-                -x POST \
+                -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 https://api.github.com/repos/OfficeDev/TeamsFx-CICD-Test/actions/workflows/trigger_cicd_by_${BRANCH}.yml/dispatches \
                 -d "{\"ref\":\"main\"}" 
