feat(core): happy path demo for v3

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -622,6 +622,22 @@
         "command": "fx-extension.openHelpFeedbackLink",
         "title": "Learn more about help and feedback",
         "icon": "$(info)"
+      },
+      {
+        "command": "fx-extension.initV3",
+        "title": "Teams: init v3"
+      },
+      {
+        "command": "fx-extension.addModuleV3",
+        "title": "Teams: add module v3"
+      },
+      {
+        "command": "fx-extension.addResourceV3",
+        "title": "Teams: add resource v3"
+      },
+      {
+        "command": "fx-extension.scaffoldV3",
+        "title": "Teams: scaffold v3"
       }
     ],
     "taskDefinitions": [
