--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -47,9 +47,9 @@ jobs:
           __TEAMSFX_INSIDER_PREVIEW=false xvfb-run -a npx lerna run test:unit --stream
 
           coverages="{}"
-          ulimit -s 65536
           for i in $(find . -name coverage-summary.json); do
-            coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson total $(jq -cr '.total' $i) '.[$package]= $total')
+            total=`jq -cr '.total' $i`
+            coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson t $total '.[$package]= $t')
           done  
           echo $coverages
           echo "::set-output name=coverages::$coverages"
@@ -91,7 +91,8 @@ jobs:
           coverages="{}"
           ulimit -s 65536
           for i in $(find . -name coverage-summary.json); do
-            coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson total $(jq -cr '.total' $i) '.[$package]= $total')
+            total=`jq -cr '.total' $i`
+            coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson t $total '.[$package]= $t')
           done  
           echo $coverages
           echo "::set-output name=coverages::$coverages"
