--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -67,13 +67,19 @@ jobs:
           fi
 
   scan-sensitive-pattern:
-    needs: check-format
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 4
+      - name: diff files in PR on Fork
+        if: ${{ github.event.pull_request.head.repo.full_name != 'OfficeDev/TeamsFx' }}
+        run: |
+          git diff --diff-fileter=MARC upstream/${{ github.event.pull_request.base.ref }}...HEAD --name-only >> .github/detect-pattern/include-patterns.txt
+
+      - name: diff files in PR on Local
+        if: ${{ github.event.pull_request.head.repo.full_name == 'OfficeDev/TeamsFx' }}
+        run: |
+          git diff --diff-fileter=MARC origin/${{ github.event.pull_request.base.ref }}...HEAD --name-only >> .github/detect-pattern/include-patterns.txt
+
       - name: trufflehog-actions-scan
-      uses: edplato/trufflehog-actions-scan@master
-      with:
-        scanArguments: "--regex --entropy=False --max_depth=10  --rules .github/detect-pattern/regexes.json -i .github/detect/include-patterns.txt -x .github/detect-pattern/exclude-patterns.txt" # Add custom options here*
+        uses: edplato/trufflehog-actions-scan@master
+        with:
+          scanArguments: "--regex --entropy=False --max_depth=10  --rules .github/detect-pattern/regexes.json -i .github/detect/include-patterns.txt -x .github/detect-pattern/exclude-patterns.txt" # Add custom options here*
